--- a/views/edit.tt
+++ b/views/edit.tt
@@ -75,15 +75,14 @@
     [% END %]
     <div class="panel-group" id="accordion[% col_panel.id %]" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
+            <a class="panel-heading" role="tab" id="headingOne" role="button"
+                data-toggle="collapse" data-parent="#accordion[% col_panel.id %]"
+                href="#topic[% col_panel.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
+                aria-controls="topic[% col_panel.id %]">
                 <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion[% col_panel.id %]"
-                        href="#topic[% col_panel.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
-                        aria-controls="topic[% col_panel.id %]">
-                        [% block_topic.name OR 'Other' | html %]
-                    </a>
+                    [% block_topic.name OR 'Other' | html %]
                 </h4>
-            </div>
+            </a>
             <div id="topic[% col_panel.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     [% IF topic.need_completed_topics_count %]
