Avoid using not() selector

--- a/src/app.scss
+++ b/src/app.scss
@@ -34,8 +34,11 @@
 }
 
 .ld-modal__footer-right {
-  & :not(:last-child) {
-    margin-right: 12px
+  > * {
+    margin-right: 12px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
