--- a/src/header.scss
+++ b/src/header.scss
@@ -1,6 +1,6 @@
 .ld-header-container {
   padding: 12px;
-  margin: 10px;
+  margin-top: 10px;
   border: solid gray 1px;
   > * {
     margin-right: 12px;
