Tweak design of record view screen

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -664,6 +664,9 @@ table {
 .table {
   margin-bottom: 21px;
 }
+.table:last-child {
+  margin-bottom: 0;
+}
 
 @media (max-width: 767px) {
   .table-responsive {
@@ -2576,6 +2579,21 @@ small.search_term {
 
 .edit-form {
   margin-bottom: 4em;
+}
+.edit-form .table {
+  table-layout: fixed;
+}
+.edit-form .table > tbody > tr:first-child > th,
+.edit-form .table > tbody > tr:first-child > td {
+  border-top: 0;
+}
+.edit-form th {
+  width: 30%;
+}
+.edit-form .form-group:after {
+  content: " ";
+  clear: both;
+  display: table;
 }
 
 .edit-form--validating .spinner {
