Tweak edit form a bit

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -704,6 +704,10 @@ output {
   color: #999999;
 }
 
+.form-group:last-child {
+  margin-bottom: 0;
+}
+
 input[type=date] {
   line-height: 35px;
 }
